# CreativeRank

./: .gitignore  dataset.py  download_data.py  features.py  features_pipeline.py  main.py  metrics.py  models.py  pyproject.toml  settings.py  test_creative_pipeline.py  utils.py  validate_feature_extraction.py
features/: creative_features.py  subject_line_features.py  test_creative_feats.py  test_subject_line_features.py
mlruns/0/: meta.yaml
notebooks/: baseline.ipynb  candidate_model _analysis.ipynb  catboost_training.ipynb  classification_baseline.ipynb  classification_baseline_experiment.ipynb  create_features_dataset.ipynb  creative_features_analysis.ipynb  creative_random_diplays.ipynb  data_versions_analysis.ipynb  download_data.ipynb  expanding_window_analysis.ipynb  expanding_window_experiment.ipynb  experiment_data.py  experiment_data_analysis.ipynb  features_analysis.ipynb  features_pipeline_analysis.ipynb  grid_search_experiment.ipynb  omer_catboost_training_2.ipynb  ranking_baseline_experiment.ipynb  subject_line_analysis.ipynb  subject_line_features_analysis.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/574327749265000283/: meta.yaml
notebooks/mlruns/738836287004510386/: meta.yaml
notebooks/mlruns/771670951665147187/: meta.yaml
notebooks/mlruns/925098199988117784/: meta.yaml
notebooks/mlruns/981012977445051394/: meta.yaml
pipelines/: creative_features_pipeline.py  features_pipeline.py  subject_line_features_pipeline.py
prompts/: base_prompt.txt  prompt_v2.txt  prompt_v3.txt  subjectline_prompt.txt  subjectline_v2.txt
(+512 files in other folders)
