[project]
name = "creativerank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "loguru>=0.7.3",
    "mlflow>=3.5.1",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "pingouin>=0.5.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
